--- a/index.html
+++ b/index.html
@@ -29,9 +29,9 @@ and open the template in the editor.
         <br>
         <div id="explain">
             <h1>
-            <p>Este proyecto consiste en ayudar a la gente como usar sus dispositivos electronicos correctamente via stream.</p>
+            <p>Este proyecto consiste en ayudar a la gente a como usar sus dispositivos electronicos. </p>
             <p>Lo unico que tienes que hacer es dar click en "Reservar" llenar el formulario 
-                y nosotros nos comunicaremos contigo</p>
+                y nosotros nos comunicaremos contigo para tomarnos un rico cafe y aprender. </p>
             <p>Si ya hiciste reservacion dar click en "Consultar" para revisar su horario 
                 de clase</p>
             </h1>
